--- a/README
+++ b/README
@@ -8,3 +8,5 @@ opencl_gen_ptx_on_C_cuda: A simple example of running PTX code, gennerated by Op
 ptx_with_C_cuda: Again running PTX code with CUDA Driver API, this time gennerated by a C CUDA program.
 
 ptx_with_opencl: Runnng PTX code via OpenCL.
+
+probe_devices  : Scans the machine and fetches info about the platforms and the devices 
